--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-puzzle": "^0.3.3",
+    "react-scripts": "3.0.0",
+    "react-sliding-tile-puzzle": "^1.0.5",
+    "semantic-ui-css": "^2.4.1",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
