--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hula",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://rodrigocs.github.io/hula",
+  "homepage": "http://rodrigocs.github.io/hula",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.10.17",
     "@fortawesome/fontawesome-free": "^5.8.1",
@@ -10,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-countdown-now": "^2.1.0",
